	* Gonryunn Quests - 0% - Botting on official Servers
	* Artifacts of God (MRO GOD ITEM QUESTS) - 1% - resources only from MRO Official
	  guide book so, probably unofficial
MasterOfMuppets
	* Working on The Sign Quest atm.
	* Updating Items / Scripts
Nexon
	* Adding in the new Abyss/Thanatos/Lighthalzen NPC's and optimizing them.

== Changelog ==

Date		Added
======
05/14
	* Fixed the quiz in the Wizard Job quest a bit [Playtester]
05/13
	* Fixed the new shops [Playtester]
	* Added missing shops at Beacon Island [Playtester]
05/12
	* Added DTS (Dungeon Teleport System) Warper NPC [Evera]
05/10
	* Fixed some typos and grammatical errors on the Job Dancer quest...
	  [Skotlex]
	* Fixed Inn dialogues [Playtester]
05/09
	* Inn now costs 5k at every level [Playtester]
05/07
	* Fixed some grammar errors in Thief Job, Kunai, and others [KillerBox]
	* Fixed Sea Otter Quest thanks to nolider [Playtester]
05/06
	* Fixed the warp in the Turbo Track Room [Playtester]
05/04
	* Hopefully fixed the custom Prontera Cemetery Event [Playtester]
	* Fixed a missing " in the gunslinger jobquest script [Playtester]
	- some others fixes as well thanks to sodaboy581 and css25
	- some typo fixed as well
05/02
	* Added kunai_maker.txt to make elemental kunais. [erKURITA]
	* Added new npcs @ que_ng.gat ninja map portion. [erKURITA]
	* Added new shops @ que_ng.gat ninja map portion. [erKURITA]
	* Commented wrong shops @ amatsu.txt. [erKURITA]
	* Added que_ng.gat ninja map portion's warp. [erKURITA]
	* Modified and corrected the gunslinger quest. [erKURITA]
05/01
	* Fixed an NPC in Morroc who still said the Dragon Fly is North [Playtester]
04/30
	* Made Geffen Tower 1 in eamobs a bit more crowded [Playtester]
	* Added the correct spawns for Ancient Geffenia(gef_dun03) [Playtester]
	* Added some tabs to the Pickpocket Quest so it's more readable [Playtester]
	* Added first version Gywall's Pickpocket Quest [Playtester]