@@ -4,6 +4,9 @@ AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO 
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
 2006/05/15
+	* Added SC_BLADESTOP to the switch listing in status_change_start [Skotlex]
+	* Characters in vending are now always considered "idle" if the
+	  idle_no_share setting is active. [Skotlex]
 	* Players with OPTION_INVISIBLE should not be sent to clients. [Lance]
 	* Remaining fixes for item scripts. [Lance]
 	* Added NPC event deprecated warnings to ease debugging old scripts. [Lance]
