@@ -42,7 +42,7 @@ party_item_share_type: 0
 // Is exp sharing disabled for idle members in the party?
 // Set to no, or the amount of seconds (NOT milliseconds) that need to pass before considering
 // a character idle.
-// Characters in a chat are always considered idle.
+// Characters in a chat/vending are always considered idle.
 // A character's idle status is reset upon item use/skill use/attack (auto attack counts too)/movement.
 idle_no_share: no
 
