@@ -27,6 +27,8 @@ Nexon
 
 Date		Added
 ======
+05/15
+	* Corrected 10 Geminis spawning in Lhz1 rather than 2. [Skotlex]
 05/14
 	* Fixed the quiz in the Wizard Job quest a bit [Playtester]
 05/13
